--- a/cellya.html
+++ b/cellya.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Portfolio - E-commerce and Digital Marketing
+   Portofolio - E-commerce and Digital Marketing
   </title>
   <script src="https://cdn.tailwindcss.com">
   </script>
@@ -20,7 +20,7 @@
   <nav class="bg-white shadow-md">
    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
     <a class="text-2xl font-bold text-blue-600" href="#">
-     MyPortfolio
+     MyPortofolio
     </a>
     <div class="hidden md:flex space-x-6">
      <a class="text-gray-600 hover:text-blue-600" href="#about">
@@ -63,7 +63,7 @@
   <section class="bg-blue-600 text-white py-20">
    <div class="container mx-auto px-4 text-center">
     <h1 class="text-4xl md:text-6xl font-bold mb-4">
-     Welcome to My Portfolio
+     Welcome to My Portofolio
     </h1>
     <p class="text-lg md:text-2xl mb-8">
      Profesional E-commerce and Digital Marketing 
@@ -191,7 +191,7 @@
   <footer class="bg-gray-800 text-white py-6">
    <div class="container mx-auto px-4 text-center">
     <p>
-     © 2023 MyPortfolio. All rights reserved.
+     © 2023 MyPortofolio. All rights reserved.
     </p>
     <div class="flex justify-center space-x-4 mt-4">
      <a class="text-white hover:text-blue-600" href="#">
